package edu.hitsz.prop.Observer;

public interface MyObserver {
    void response();
}
